# suitetalk_connector

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
suitetalk_connector/: __init__.py  netsuite-v2022_1_0.wsdl  netsuite-v2023_1_0.wsdl  restconnector.py  soapadaptor.py  soapconnector.py
