[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "SuiteTalk-Connector"
version = "0.0.1"
description = "Use to connect NetSuite SuiteTalk SOAP API."
authors = ["Idea Bosque <ideabosque@gmail.com>"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
readme = "README.md"
repository = "https://github.com/ideabosque/suitetalk_connector"

[tool.poetry.dependencies]
python = "^3.6"
zeep = "^4.0.0"
tenacity = "^7.0.0"
requests = "^2.25.1"
warlock = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.publish]
repository = "https://pypi.org/legacy/"  # Production PyPI repository
[[tool.poetry.publish]]
name = "testpypi"  # Name for the dev repository (you can choose a custom name)
url = "https://test.pypi.org/legacy/"  # URL for the dev repository (e.g., TestPyPI)
