[tool.poetry]
name = "SuiteTalk-Connector"
version = "0.0.3.beta.1"
description = "Use to connect NetSuite SuiteTalk SOAP API."
authors = ["Idea Bosque <ideabosque@gmail.com>"]
license = "MIT"
classifiers = [
    "Programming Language :: Python",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
readme = "README.md"
homepage = "https://github.com/ideabosque/suitetalk_connector"
repository = "https://github.com/ideabosque/suitetalk_connector"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.6"
zeep = "^4.0.0"
tenacity = "^8.2.3"
requests = "^2.25.1"
warlock = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
